--- a/Front/home.html
+++ b/Front/home.html
@@ -65,8 +65,8 @@
         <div id="homebanner">
             <img src="images/Homepage/banner-with-overlay.jpg" alt="Home-page-banner" class="img-responsive">
         </div>
-
-        <div class="container" id="overlay-content">
+        <div id="overlay-content">
+        <div class="container">
             <div class="row">
                 <div class="col-sm-8 col-md-6">
                     <div>
@@ -78,6 +78,7 @@
                     </div>
                 </div>
             </div>
+        </div>
         </div>
     </section>
 
